--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
                         <a href="https://www.sharesansar.com"><img src="https://icons.duckduckgo.com/ip3/sharesansar.com.ico" class="favicon" alt="ShareSansar favicon">Share Sansar</a>
                     </li>
                     <li>
-                        <a href="https://nepsealpha.com/trading/chart"><img src="https://icons.duckduckgo.com/ip3/nepsealpha.com.ico" class="favicon" alt="NepseAlpha favicon">Nepse Alpha</a>
+                        <a href="https://nepsealpha.com/trading/chart"><img src="nepsealpha.png" class="favicon" alt="NepseAlpha favicon">Nepse Alpha</a>
                     </li>
                     <li>
-                        <a href="https://meroshare.cdsc.com.np"><img src="https://meroshare.cdsc.com.np/assets/img/favicon.png" class="favicon" alt="MeroShare favicon">Mero Share</a>
+                        <a href="https://meroshare.cdsc.com.np"><img src="meroshare.png" class="favicon" alt="MeroShare favicon">Mero Share</a>
                     </li>
                 </ul>
             </section>
