--- a/index.html
+++ b/index.html
@@ -123,5 +123,18 @@
             </section>
         </section>
     </main>
+	<script>
+		if ('serviceWorker' in navigator) {
+		  window.addEventListener('load', function() {
+			navigator.serviceWorker.register('/js/service-worker.js')
+			  .then(function(registration) {
+				console.log('Service worker registered with scope:', registration.scope);
+			  })
+			  .catch(function(error) {
+				console.log('Service worker registration failed:', error);
+			  });
+		  });
+		}
+	</script>
 </body>
 </html>
